[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://actors/LevelPortal.gd" id="1_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(64, 96)

[node name="LevelPortal" type="Area2D"]
collision_layer = 256
collision_mask = 2
script = ExtResource("1_script")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="PortalSprite" type="ColorRect" parent="."]
offset_left = -32.0
offset_top = -48.0
offset_right = 32.0
offset_bottom = 48.0
color = Color(0.5, 1, 1, 0.7)

[node name="InnerGlow" type="ColorRect" parent="."]
offset_left = -24.0
offset_top = -40.0
offset_right = 24.0
offset_bottom = 40.0
color = Color(1, 1, 1, 0.5)

[node name="Particles" type="CPUParticles2D" parent="."]
emitting = true
amount = 30
lifetime = 2.0
emission_shape = 3
emission_rect_extents = Vector2(25, 40)
direction = Vector2(0, -1)
spread = 30.0
initial_velocity_min = 20.0
initial_velocity_max = 50.0
gravity = Vector2(0, -20)
scale_amount_min = 0.5
scale_amount_max = 1.0
color = Color(0.5, 1, 1, 0.8)

[node name="Label" type="Label" parent="."]
offset_left = -40.0
offset_top = -70.0
offset_right = 40.0
offset_bottom = -50.0
text = "FINISH"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 12

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true